--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,10 @@ img {
 
 /* BASE */
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     /* PESO DA FONTE = 400. TAMANHO DA FONTE: 1 rem. */
     font: 400 1rem "DM sans", sans-serif;
@@ -143,6 +147,10 @@ body {
     background-color: var(--body-color);
 }
 
+#header.scroll {
+    box-shadow: 1px 2px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
 main {
     margin-top: calc(var(--header-height) + 2rem);
 }
@@ -201,6 +209,12 @@ nav ul li a:hover::after{
 nav .menu{
     opacity: 0;
     visibility: hidden;
+    top: -20rem;
+    transition: 0.2s;
+}
+
+nav .menu ul{
+    display: none;
 }
 
 /* =========== MOSTRAR MENU ============ */
@@ -214,11 +228,12 @@ nav.show .menu{
     position: fixed;
     top: 0;
     left: 0;
-}
-
-nav.show .menu{
     display: grid;
     place-content: center;
+}
+
+nav.show .menu ul{
+    display: grid;
 }
 
 nav.show ul.grid{
@@ -238,12 +253,15 @@ nav .icon-close{
 
     position: absolute;
     right: 1.5rem;
+    top: -1.5rem;
 
+    transition: 0.2s;
 } 
 
 nav.show div.icon-close{
     visibility: visible;
     opacity: 1;
+    top: 1.5rem;
 }
 
 /* HOME */
@@ -346,4 +364,21 @@ nav.show div.icon-close{
 
 .card{
     padding: 3.625rem 2rem;
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+    border-bottom: 0.25rem solid var(--base-color);
+    border-radius: .25rem .25rem 0 0;
+    text-align: center;
+}
+
+.card i {
+    display: block;
+    margin-bottom: 1.5rem;
+    font-size: 5rem;
+    color: var(--base-color);
+}
+
+
+.card .title{
+    font-size: 1.5rem;
+    margin-bottom: 0.75rem;
 }
